Added magic. And bonus for firemark.

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -2,6 +2,8 @@
     <div class="container">
         <ul class="nav nav-pills pull-right row">
             <!--- plz normal links -->
+            <li><a href="http://localhost:8080/deploy/index.html">Test dynamic load</a></li>
+            <li><a href="#temp-page">Page</a></li>
             <li><a href="#temp-about">O nas</a></li>
             <li><a href="#temp-place">Miejsce</a></li>
             <li><a href="#temp-community">Społeczności</a></li>
