--- a/src/less/style.less
+++ b/src/less/style.less
@@ -2,4 +2,6 @@
 @import "lesshat.less";
 @import "variables.less";
 @import "mixins.less";
+@import "util.less";
 @import "main.less";
+@import "page.less";
