DURR DERP WURDPREZZ

--- a/src/templates/news.html
+++ b/src/templates/news.html
@@ -1,6 +1,6 @@
 <div class="col-sm-5 col-sm-offset-1">
   <h3 class='text-center'>Aktualności</h3>
-  <ul class='news'>
+  <ul class='news magic-links'>
     <li>
       <a href='http://pajacyk.pl'>
         <time>18 Dec 2014</time>
