Wordpress fixes. Loader resize.

--- a/hs_silesia/style.css
+++ b/hs_silesia/style.css
@@ -1,8 +1,8 @@
 /*
 Theme Name: Hackerspace Silesia
-Theme URI: http://example.com/
-Description: Child theme for the Twenty Eleven theme
-Author: Your name here
-Author URI: http://example.com/about/
-Version: 0.1.0
+Theme URI: https://github.com/Palid/hs-site-template
+Description: Custom theme created for Hackerspace Silesia.
+Author: Marek 'Firemark' Piechula & Dariusz 'Palid' Niemczyk
+Author URI: https://github.com/Palid
+Version: 1.0.1
 */
