--- a/src/less/util.less
+++ b/src/less/util.less
@@ -7,10 +7,10 @@
   .absolute();
  }
 .loader {
-  background-image: url(../assets/loader.gif);
+  background-image: url(../assets/loader-small.gif);
   background-position: center center;
   background-repeat: no-repeat;
-  .loaderUtil(853, 973);
+  .loaderUtil(128, 128);
 }
 .text-fa{
   margin-right:10px;
