More dynamic gen?

--- a/src/templates/news.html
+++ b/src/templates/news.html
@@ -1,29 +1,14 @@
 <div class="col-sm-5 col-sm-offset-1">
   <h3 class='text-center'>Aktualności</h3>
   <ul class='news magic-links'>
+  {% for item in news %}
     <li>
-      <a href='http://pajacyk.pl'>
-        <time>18 Dec 2014</time>
-        Socek atakuje 2: ostateczna bitwa
+      <a href="{{ item.link }} ">
+        <time>{{ item.time }}</time>
+        {{ item.text | truncate(50) }}
       </a>
     </li>
-    <li>
-      <a href='http://pajacyk.pl'>
-        <time>17 Dec 2014</time>
-        Socek atakuje
-      </a>
-    </li>
-    <li>
-      <a href='http://pajacyk.pl'>
-        <time>16 Dec 2014</time>
-        Socek atakuje
-      </a>
-    </li>
-    <li>
-      <a href='http://pajacyk.pl'>
-        <time>15 Dec 2014</time>
-        Socek atakuje
-      </a>
-    </li>
+  {% endfor %}
   </ul>
 </div>
+
