--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,15 +1,20 @@
 <footer class="footer">
-    <div class="container text-right">
-        <div class="col-lg-12">
-            <p>
-                <a href="https://www.facebook.com/HackerspaceSilesia"><i class="fa fa-facebook fa-lg"></i></a>
-                <a href="https://twitter.com/hs_silesia"><i class="fa fa-twitter fa-lg"></i></a>
-                <a href="https://plus.google.com/105433210692287375139" rel="publisher"><i class="fa fa-google-plus fa-lg"></i></a>
-                <a href="mailto:silesia@lists.hackerspace.pl"><i class="fa fa-envelope fa-lg"></i></a>
-                <a href="http://silesia.hackerspace.pl/feed.xml"><i class="fa fa-rss fa-lg"></i></a>
-                Created by hs-sil team | Bootstrap template
-                <a href='http://bootswatch.com/'>bootswatch.com</a>
-            </p>
-        </div>
-    </di>
-</footer>
+  <div class="container text-right">
+    <div class="col-lg-12">
+      <p>
+      {%- for item in footer -%}
+      <a href="{{ item.link }}"
+        {%- if item.properties -%}
+          {%- for propertyName, property in item.properties -%}
+            {{ propertyName }}="{{ property }}"
+            {%- endfor -%}
+          {%- endif -%}
+          ><i class="fa fa-{{ item.icon }} fa-lg"></i>
+        </a>
+        {%- endfor -%}
+        Created by hs-sil team | Bootstrap template
+        <a href='http://bootswatch.com/'>bootswatch.com</a>
+        </p>
+      </div>
+    </div>
+  </footer>
