--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -6,16 +6,11 @@
 <header>
     <div class="container">
         <ul class="nav nav-pills pull-right row">
-            <!--- plz normal links -->
-            <li><a class="magic-link" href="http://localhost:8080/deploy/index.html">Test dynamic load</a></li>
-            <li><a class="magic-link" href="#temp-page">Page</a></li>
-            <li><a class="magic-link" href="#temp-about">O nas</a></li>
-            <li><a class="magic-link" href="#temp-place">Miejsce</a></li>
-            <li><a class="magic-link" href="#temp-community">Społeczności</a></li>
-            <li><a class="magic-link" href="#temp-calendar">Kalendarz</a></li>
-            <li><a class="magic-link" href="#temp-gallery">Galeria</a></li>
-            <li><a class="magic-link" href="#temp-partners">Partnerzy</a></li>
-            <li><a class="magic-link" href="#temp-contact">Kontakt</a></li>
+            {% for link in header %}
+            <li>
+              <a href="{{ link.href }}">{{ link.text }}</a>
+            </li>
+            {% endfor %}
         </ul>
     </div>
 </header>
