fixes in loader

--- a/src/less/util.less
+++ b/src/less/util.less
@@ -12,6 +12,7 @@
   border-radius: 8px;
   border: 2px solid pink;
   background-repeat: no-repeat;
+  backround-color: @background;
   .loaderUtil(128, 148);
   span {
     color: red;
