changes in footer

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -14,6 +14,8 @@
         {%- endfor -%}
         Created by hs-sil team | Bootstrap template
         <a href='http://bootswatch.com/'>bootswatch.com</a>
+	| site runs on
+	<a href='http://www.vultr.com/?ref=6819909'>www.vultr.com</a>
         </p>
       </div>
     </div>
