--- a/src/less/util.less
+++ b/src/less/util.less
@@ -12,7 +12,7 @@
   border-radius: 8px;
   border: 2px solid pink;
   background-repeat: no-repeat;
-  backround-color: @background;
+  background-color: white;
   .loaderUtil(128, 148);
   span {
     color: red;
