--- a/hs-theme/style.css
+++ b/hs-theme/style.css
@@ -585,11 +585,11 @@ button,
 input[type="submit"],
 input[type="button"],
 input[type="reset"] {
-	background: #e05d22; /* Old browsers */
-	background: -webkit-linear-gradient(top, #e05d22 0%, #d94412 100%); /* Chrome 10+, Safari 5.1+ */
-	background:   linear-gradient(to bottom, #e05d22 0%, #d94412 100%); /* W3C */
+	background: #1A94CD; /* Old browsers */
+	background: -webkit-linear-gradient(top, #1A94CD 0%, #1473A0 100%); /* Chrome 10+, Safari 5.1+ */
+	background:   linear-gradient(to bottom, #1A94CD 0%, #1473A0 100%); /* W3C */
 	border: none;
-	border-bottom: 3px solid #b93207;
+	border-bottom: 3px solid #1473A0;
 	border-radius: 2px;
 	color: #fff;
 	display: inline-block;
@@ -605,9 +605,9 @@ input[type="reset"]:hover,
 input[type="submit"]:focus,
 input[type="button"]:focus,
 input[type="reset"]:focus {
-	background: #ed6a31; /* Old browsers */
-	background: -webkit-linear-gradient(top, #ed6a31 0%, #e55627 100%); /* Chrome 10+, Safari 5.1+ */
-	background:   linear-gradient(to bottom, #ed6a31 0%, #e55627 100%); /* W3C */
+	background: #1A94CD; /* Old browsers */
+	background: -webkit-linear-gradient(top, #1A94CD 0%, #1473A0 100%); /* Chrome 10+, Safari 5.1+ */
+	background:   linear-gradient(to bottom, #1A94CD 0%, #1473A0 100%); /* W3C */
 	outline: none;
 }
 
@@ -615,11 +615,11 @@ button:active,
 input[type="submit"]:active,
 input[type="button"]:active,
 input[type="reset"]:active {
-	background: #d94412; /* Old browsers */
-	background: -webkit-linear-gradient(top, #d94412 0%, #e05d22 100%); /* Chrome 10+, Safari 5.1+ */
-	background:   linear-gradient(to bottom, #d94412 0%, #e05d22 100%); /* W3C */
+	background: #1A94CD; /* Old browsers */
+	background: -webkit-linear-gradient(top, #1A94CD 0%, #1473A0 100%); /* Chrome 10+, Safari 5.1+ */
+	background:   linear-gradient(to bottom, #1A94CD 0%, #1473A0 100%); /* W3C */
 	border: none;
-	border-top: 3px solid #b93207;
+	border-top: 3px solid #1473A0;
 	padding: 10px 24px 11px;
 }
 
