Added full-width page theme

--- a/hs-theme/style.css
+++ b/hs-theme/style.css
@@ -3228,3 +3228,10 @@ footer.entry-meta {
 		color: #333;
 	}
 }
+
+    /* ======================= Full Width Page ===============*/
+
+    .entry-header-full, .entry-content-full {
+    margin: 0 auto;
+    max-width: 1040px;
+    }
