--- a/hs-theme/style.css
+++ b/hs-theme/style.css
@@ -3280,13 +3280,15 @@ footer.entry-meta {
 .image-box {
     background-color: #DDD;
     width: 280px;
-    display: block;
-    float:  left;
-    height: 128px;
+    display: inline-block;
+    overflow: hidden;
+    height: 160px;
     padding: 25px;
     margin: 15px;
     line-height: 50%;
     border: #CCC 1px solid;
     border-radius: 15px;
     box-shadow: 0 0 5px #BBB;
+    text-align: center;
+
 }
